Fix header and stuck scrolling

--- a/frontend/public/stylesheets/base/layout.css
+++ b/frontend/public/stylesheets/base/layout.css
@@ -4,7 +4,7 @@
 }
 
 .main-content {
-  height: calc(100% - 68px);
+  height: 100%;
   width: 100%;
 }
 
