--- a/frontend/public/stylesheets/components/_movie_index.css
+++ b/frontend/public/stylesheets/components/_movie_index.css
@@ -20,6 +20,7 @@ html, body {
 .movie-index-main {
   color: white;
   overflow-x: hidden;
+  height: 100%;
 }
 
 
